2010-09-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for plugin about dialog. 
	* haikyo.py (PhotoSourceHaikyoUI): Fixed the sensitiveness of
	  target widget.
	* shotwell.py: Added support for Shotwell.
	* iconimage.py (IconImage.get_image): Fixed a bug.

2010-09-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translations.

2010-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0.1 release.
	* fspot/__init__.py: Added support for F-Spot 0.7.x database.

2010-07-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/haikyo.py: Added new plugin for haikyo
	  clock (http://www.madin.jp/haikyo/).

2010-07-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 release.

2010-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, EXIF.py: Removed obsolete has_key methods.

2010-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b5 release.
	* keyring.py: Fixed a segmentation fault problem of relating to
	  use DBus from multiple threads.

2010-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py (FlickrPhotoList._prepare_cb): Fixed a
	  strptime format.
	* base.py (ParseEXIF.get_date_taken): Added support for 
	  'EXIF DateTimeOriginal'.

2010-06-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b4 release.
	* actors.py (ActorSourceIcon._get_ui_data): Changed the
	  'show_always' default value to 'False'.
	* picasa.py (PicasaPhotoList._set_photo_cb): Fixed KeyErrors.

2010-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b3 release.

2010-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py, utils/inotify.py: Removed __del__ methods.
	* gphotoframe.schemas.in: Changed the default value of
	  'ui/source/always_show' to 'false'.

2010-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b2 release.
	* actors.py (ActorInfoIcon): Adjust an EXIF icon position offset.
	* keyring.py (Keyring.get_passwd): Added an exception for